scroll todo list content if height exceeds 800px

--- a/app/assets/stylesheets/_student_sidebar.sass
+++ b/app/assets/stylesheets/_student_sidebar.sass
@@ -53,6 +53,8 @@
     margin: 0
     padding-left: 0
     font-size: .8rem
+    max-height: 800px
+    overflow-y: auto
 
     li
       list-style-type: none
