--- a/app/views/students/_student_sidebar.html.haml
+++ b/app/views/students/_student_sidebar.html.haml
@@ -2,7 +2,8 @@
   .panel.todo.dashboard-module= render "students/sidebar/sidebar_to_do_list"
 
 .col-40
-  .panel.dashboard-module= render "students/sidebar/sidebar_course_events"
+  - if @events.present?
+    .panel.dashboard-module= render "students/sidebar/sidebar_course_events"
 
   .panel.dashboard-module= render "students/sidebar/sidebar_since_last_login"
 
