--- a/app/views/assignments/_self_log_form.html.haml
+++ b/app/views/assignments/_self_log_form.html.haml
@@ -1,7 +1,7 @@
 = simple_form_for student.grade_for_assignment(assignment), :url => self_log_assignment_grades_path(assignment), :method => :post do |f|
   - if ! student.self_reported_done?(assignment)
     - if assignment.has_levels?
-      = f.select :raw_points, assignment.assignment_score_levels.map { |l| [l.formatted_name,l.value] }, :prompt => "Select your grade"
+      = f.select :raw_points, assignment.assignment_score_levels.map { |l| [l.formatted_name,l.points] }, :prompt => "Select your grade"
       = f.submit "Submit", class: "button success"
     - else
       = f.submit "I have completed this #{term_for :assignment}", class: "button success"
