--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,6 +36,7 @@
   *= require _collapse
   *= require _context_menu
   *= require _features
+  *= require _grading_scheme
   *= require _history_timeline
   *= require _footer
   *= require _forms
@@ -54,7 +55,6 @@
   *= require _rubrics
   *= require _signup
   *= require _staff_sidebar
-  *= require _student_sidebar
   *= require _student_subnav
   *= require _student_dashboard
   *= require _tables
