--- a/app/views/students/dashboard/_dashboard_earned_points_and_level.haml
+++ b/app/views/students/dashboard/_dashboard_earned_points_and_level.haml
@@ -8,8 +8,8 @@
       / Display current level if it is present
       %br
       You have achieved the
-      %span.bold= link_to "#{current_student.grade_level_for_course(current_course)} level", course_progress_path
-    - cache multi_cache_key :student_sidebar_total_score, current_student, current_course do
+      %span.bold= link_to "#{current_student.grade_level_for_course(current_course)} level", grading_scheme_path
+    - cache multi_cache_key :student_dashboard_total_score, current_student, current_course do
       - scores = total_scores_for_chart current_student, current_course
       #data-predictor{"data-predictor" =>  scores.to_json}
       .chart#userBarTotal
