--- a/app/views/students/_students_table.haml
+++ b/app/views/students/_students_table.haml
@@ -11,7 +11,7 @@
         %th #{current_course.team_term}
       - if current_course.team_roles?
         %th Role
-      %th{ "data-dynatable-sorts" => "numericScore" } Score
+      %th{scope: "col"} Score
       %th Grade
       %th{ :style => "min-width: 200px" }
   %tbody
