Fixed haml issue

--- a/app/views/layouts/_staff.haml
+++ b/app/views/layouts/_staff.haml
@@ -9,4 +9,4 @@
       = render partial: "students/student_profile_tabs"
 
   / Page content
-  .mainContent{ class: (@display_sidebar ? "student" : "") }= render partial: "layouts/content"
+  .mainContent= render partial: "layouts/content"
