--- a/app/views/students/_student_profile_tabs.haml
+++ b/app/views/students/_student_profile_tabs.haml
@@ -20,8 +20,8 @@
     %li{class: ("active" if current_page?(syllabus_path)) }
       = link_to_unless_current glyph('file-text') + "#{term_for :assignments}", syllabus_path
     - if current_course.grade_scheme_elements.present?
-      %li{class: ("active" if current_page?(course_progress_path)) }
-        = link_to_unless_current glyph("level-up") + "Grading Scheme", course_progress_path
+      %li{class: ("active" if current_page?(grading_scheme_path)) }
+        = link_to_unless_current glyph("level-up") + "Grading Scheme", grading_scheme_path
     %li{class: ("active" if current_page?(predictor_path)) }
       = link_to_unless_current glyph(:tasks) + "Grade Predictor", predictor_path
     - if current_course.has_badges?
