--- a/app/views/students/predictor.html.haml
+++ b/app/views/students/predictor.html.haml
@@ -1,1 +1,6 @@
+%h3.pagetitle= "Grade Predictor"
+
+.pageContent
+  = render "layouts/alerts"
+
 #predictor-main-content{class: ("with-sidebar" if ! @fullpage), "ng-app" => "gradecraft", "ng-init" => "init(#{@student_id})", "ng-controller" => "PredictorCtrl", "ng-include" => true, "src" => "'ng_predictor_main.html'"}
