--- a/app/views/students/predictor.html.haml
+++ b/app/views/students/predictor.html.haml
@@ -3,4 +3,4 @@
 .pageContent
   = render "layouts/alerts"
 
-#predictor-main-content{class: ("with-sidebar" if ! @fullpage), "ng-app" => "gradecraft", "ng-init" => "init(#{@student_id})", "ng-controller" => "PredictorCtrl", "ng-include" => true, "src" => "'ng_predictor_main.html'"}
+#predictor-main-content{class: ("with-sidebar" if ! @fullpage), "ng-app" => "gradecraft", "ng-init" => "init(#{params[:student_id]})", "ng-controller" => "PredictorCtrl", "ng-include" => true, "src" => "'ng_predictor_main.html'"}
