added logic to show grading scheme module when points achived was lower than first level threshold in grading scheme

--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -101,6 +101,9 @@
     .left-points, .right-points
       margin: 0
 
+  .bar_magic.no-level
+    background-color: transparentize($color-yellow-1, .75)
+
   .avatar
     text-align: center
     position: relative
