--- a/app/views/students/dashboard/_dashboard_grading_scheme.haml
+++ b/app/views/students/dashboard/_dashboard_grading_scheme.haml
@@ -2,42 +2,39 @@
   %h3 Course Progress
 .card-body
 
-  - if current_student.grade_for_course(current_course).present?
-    - next_element = current_student.get_element_level(current_course, :next)
-    - if !next_element.nil?
+  - if presenter.current_element.present?
+    - if presenter.next_element.present?
       .progress.bar_magic.transparent.center
         .meter
           %i.fa.fa-lock
-          %span= next_element.name
-          %span=points next_element.lowest_points
+          %span= presenter.next_element.name
+          %span=points presenter.next_element.lowest_points
 
-    - current_element = current_student.grade_for_course(current_course)
     .progress.bar_magic.current.center
       %span.your-rank Your rank:
-      %span.your-rank= current_element.name
+      %span.your-rank= presenter.current_element.name
       .striped-bar-container
-        .striped{:style => "width: #{current_element.progress_percent(current_student)}%;"}
+        .striped{ style: "width: #{ presenter.progress_percent }%;" }
       .left-points
         %span Your Points:
-        %span.bold=points current_student.cached_score_for_course(current_course)
+        %span.bold=points presenter.score_for_course
       .right-points
         %span Points to next level:
-        %span.bold= points current_element.points_to_next_level(current_student, current_course)
+        %span.bold= points presenter.points_to_next_level
 
-    - previous_element = current_student.get_element_level(current_course, :previous)
-    - if !previous_element.nil?
+    - if presenter.previous_element.present?
       .progress.bar_magic.success.center
         .meter
           %i.fa.fa-star
-          %span= previous_element.name
+          %span= presenter.previous_element.name
           %span has already been achieved!
-          %span=points previous_element.lowest_points
+          %span=points presenter.previous_element.lowest_points
   - else
     .progress.bar_magic.transparent.center
       .meter
         %i.fa.fa-lock
-        %span= current_course.grade_scheme_elements.order_by_lowest_points[0].name
-        %span=points current_course.grade_scheme_elements.order_by_lowest_points[0].lowest_points
+        %span= presenter.grade_scheme_elements[0].name
+        %span=points presenter.grade_scheme_elements[0].lowest_points
 
     .progress.bar_magic.current.center.no-level
       %span.your-rank Your rank: Not on the board yet!
