added scroll table class to awarded badges table and course index table

--- a/app/assets/stylesheets/_tables.sass
+++ b/app/assets/stylesheets/_tables.sass
@@ -40,6 +40,9 @@ table
   overflow-x: scroll
   display: block
 
+  &.stacktable.large-only
+    display: block
+
 /* Styling pattern tables for assignment outcome overview */
 td.complete, tr.achieved
   background-color: $color-green-1
