--- a/app/views/info/earned_badges.html.haml
+++ b/app/views/info/earned_badges.html.haml
@@ -7,7 +7,7 @@
 
   = team_filter(@teams) if current_course.has_teams?
 
-  %table.dynatable.no-table-header.no-button-bar
+  %table.dynatable.no-table-header.no-button-bar.scroll-table
     %caption.sr-only All Awarded Achievements
     %thead
       %tr
