--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -12,7 +12,7 @@
 .pageContent
   = render partial: "layouts/alerts"
 
-  %table.dynatable{"aria-describedby" => "tableCaption"}
+  %table.dynatable.scroll-table{"aria-describedby" => "tableCaption"}
     %thead
       %tr
         %th{scope: "col"} Course No
