--- a/app/views/assignment_types/_form.html.haml
+++ b/app/views/assignment_types/_form.html.haml
@@ -17,7 +17,7 @@
       / What's the max number of points a student may earn in this category?
       = f.label :max_points, :label => "Maximum Points"
       = f.text_field :max_points, data: {autonumeric: true, "m-dec" => "0"}
-      .form_label{id: "txtMaxPoints"} Is there a cap on how many points students can earn through this category (Leave blank if not)? If you fill this in, students will not be able to earn more than this amount.
+      .form_label{id: "txtMaxPoints"} Is there a cap on how many points students can earn through this category (Set to 0 if not)? If you fill this in, students will not be able to earn more than this amount.
 
     .form-item
       = f.label :student_weightable, "Student Weighted"
