constrained width of course event slider images

--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -178,6 +178,9 @@
   height: auto
   padding: 0.25rem 1.5rem
 
+  img
+    max-width: 128px
+
 .event-name
   font-size: 1rem
   text-align: center
