fixed styling and placement of announcements and notification badge in top navigation

--- a/app/assets/stylesheets/_student_subnav.sass
+++ b/app/assets/stylesheets/_student_subnav.sass
@@ -20,10 +20,10 @@
     display: inline
     list-style-type: none
     margin: 0
-    
+
     i
       display: none
-      
+
 
   /* Individual Tabs */
   .navbar-nav
@@ -42,7 +42,7 @@
         color: $color-white
     li.active
       padding: .8rem .5rem !important
-    
+
     h5, hr
       display: none
 
@@ -51,14 +51,16 @@
   background-color: $color-blue-3
   color: $color-white
 
-li .announcement-notification-badge
-  position: relative
-  top: -2px
-  margin: 0
-  left: 5px
 
-li a.notification-right
-  padding: 1rem 0 1rem 1rem !important
+li.announcement-nav
+  position: relative
+
+li .announcement-notification-badge
+  position: absolute
+  top: 10px
+  margin: 0
+  right: -20px
+
 
 @media (min-width: $media-small-max)
   i
