--- a/app/views/students/_student_profile_tabs.haml
+++ b/app/views/students/_student_profile_tabs.haml
@@ -28,10 +28,10 @@
       %li{class: ("active" if current_page?(badges_path)) }
         = link_to_unless_current glyph(:shield) + "#{term_for :badges}", badges_path
     - if current_course.announcements.present?
-      %li{class: ("active" if current_page?(announcements_path)) }
+      %li{class: (current_page?(announcements_path)? "active" : "announcement-nav") }
         - unread_count = unread_count_for current_student, current_course
         - if unread_count > 0
-          = link_to_unless_current "Announcements", announcements_path, class: "notification-right"
+          = link_to_unless_current "Announcements", announcements_path
           %div.notification-badge.announcement-notification-badge= unread_count
         - else
           = link_to_unless_current "Announcements", announcements_path
