updated styling of notification badges and removed underline from navigation links on student subnav

--- a/app/assets/stylesheets/_buttons_and_icons.sass
+++ b/app/assets/stylesheets/_buttons_and_icons.sass
@@ -138,10 +138,11 @@ tbody
 
 .notification-badge
   background-color: $color-red-1
-  border-radius: 10px
+  border-radius: 50%
   color: $color-white
   font-size: 12px
-  padding: 2px 8px 0 7px
+  width: 1.2rem
+  line-height: 1.2rem
   text-align: center
   float: right
   margin-right: .25em
