--- a/app/assets/stylesheets/_staff_sidebar.sass
+++ b/app/assets/stylesheets/_staff_sidebar.sass
@@ -72,16 +72,17 @@
 /* Positioning and styling of notification badges in staff-sidenav */
 .staff-sidenav li
   position: relative
-  
+
 .staff-sidenav
   .staff-notification-badge
     background-color: $color-red-1
     border-radius: 50%
     color: $color-white
-    padding: .1rem .25rem
+    width: 1.4rem
+    line-height: 1.4rem
     position: absolute
     right: 0
-    top: 3
+    top: 3px
 
   /* Spacing the list divider */
   hr
