--- a/app/assets/stylesheets/_student_subnav.sass
+++ b/app/assets/stylesheets/_student_subnav.sass
@@ -65,6 +65,9 @@ li .announcement-notification-badge
   margin: 0
   right: 2px
 
+@media (max-width: $media-medium-max)
+  .sub-nav
+    display: none
 
 @media (min-width: $media-small-max)
   i
