--- a/app/views/students/syllabus/_assignments.haml
+++ b/app/views/students/syllabus/_assignments.haml
@@ -11,6 +11,10 @@
       #{assignment_type.try(:name)} • #{ points assignment_type.visible_score_for_student(presenter.student) }/#{ points assignment_type.total_points_for_student(presenter.student) }
 
     .assignment-type-container
+      - if assignment_type.is_capped?
+        .italic This #{ (term_for :assignment_type).downcase } is capped at #{ points assignment_type.max_points } points.
+      - if assignment_type.count_only_top_grades?
+        .italic You have completed #{ assignment_type.count_grades_for(current_student) } #{ (term_for :assignments).downcase } in this category. Your top #{ assignment_type.top_grades_counted } grades count towards your course score.
       - if assignment_type.description?
         %p.description= raw assignment_type.description
 
