--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -37,50 +37,33 @@ a.site-title
   a
     display: block
 
-.layout-left-flyout
-  left: 0
-
-.layout-left-flyout.isCbFlyNavLeftActive
-  visibility: visible
-  transition: z-index 0 linear .2s
-  z-index: 1000
-
-.cbFlyNavLeft-wrap
-  display: block
-  box-sizing: border-box
-  position: relative
+.offscreen-sidebar
+  display: none
+  position: fixed
+  background-color: $color-grey-6
+  width: 300px
   height: 100%
-  overflow: scroll
-  width: 250px
-  -webkit-perspective: 1000
-  -webkit-backface-visibility: hidden
-  -webkit-transform-style: preserve-3d
-  > nav
-    transform: translateY(0)
-    transition: transform 0 ease-in-out
+  z-index: 1000
+  overflow: auto
+  ul
+    list-style-type: none
+    margin: 0
+    padding: 0
+  a
+    display: block
 
-.nav-collapse
-  -webkit-transform: translate3d(0,0,0)
-  -webkit-transform-style: preserve-3d
 
-.layout-right-content, .offscreen-sidebar
+.layout-right-content
   z-index: 100
   transition: transform .2s ease-in-out
   -webkit-backface-visibility: hidden
 
-.layout-right-content.isCbFlyNavLeftActive
-  top: -2rem !important
-  transform: translate3d(250px,0,0)
-  position: relative
-
-.nav-flyout-navmask, .nav-flyout-contentmask, .nav-flyout-navmask-left, .nav-flyout-contentmask-left
+.nav-flyout-contentmask, .nav-flyout-contentmask-left
   position: fixed
   top: 0
   bottom: 0
   left: 0
   right: 0
-
-.nav-flyout-contentmask, .nav-flyout-contentmask-left
   z-index: 1
   height: 100vh
   background-color: rgba(0,0,0, .7)
@@ -181,12 +164,6 @@ ul.subnav.logged-out
 .btn-public-nav
   display: none
 
-.offscreen-sidebar
-  display: none
-
-.isCbFlyNavLeftActive .offscreen-sidebar
-  margin-right: 0
-  display: block
 
 /* Large Screen Styles*/
 @media (min-width: $media-medium-max)
@@ -313,8 +290,8 @@ ul.subnav.logged-out
   li.dropdown a.section-title
     color: $color-blue-3
 
-  .layout-left-flyout
-    width: 250px
+  .offscreen-sidebar
+    width: 300px
     li
       padding: .2em
     li, li a
