--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -17,42 +17,6 @@ a.site-title
   margin: 0 auto
 
 /* In app mobile left flyout menu styles */
-.layout-left-flyout
-  height: 100%
-  position: fixed
-  visibility: hidden
-  padding: 0
-  z-index: 0
-  top: 0
-  transition: visibility 0 linear .2s
-  background-color: $color-grey-6
-  transition: visibility 0 linear .2s
-  -webkit-perspective: 1000
-  -webkit-backface-visibility: hidden
-  -webkit-transform-style: preserve-3d
-  ul
-    list-style-type: none
-    margin: 0
-    padding: 0
-  a
-    display: block
-
-.offscreen-sidebar
-  display: none
-  position: fixed
-  background-color: $color-grey-6
-  width: 300px
-  height: 100%
-  z-index: 1000
-  overflow: auto
-  ul
-    list-style-type: none
-    margin: 0
-    padding: 0
-  a
-    display: block
-
-
 .layout-right-content
   z-index: 100
   transition: transform .2s ease-in-out
@@ -166,7 +130,10 @@ ul.subnav.logged-out
 
 
 /* Large Screen Styles*/
-@media (min-width: $media-medium-max)
+@media (min-width: $media-large-min)
+  .offscreen-sidebar
+    display: none !important
+
   .navbar
     height: auto
 
@@ -256,6 +223,7 @@ ul.subnav.logged-out
     border-bottom-left-radius: $global-radius
     border-bottom-right-radius: $global-radius
 
+
 /* Mobile Styles */
 @media (max-width: $media-medium-max)
   .logged-in .navbar .nav-collapse
@@ -291,7 +259,17 @@ ul.subnav.logged-out
     color: $color-blue-3
 
   .offscreen-sidebar
+    display: none
+    position: fixed
+    background-color: $color-grey-6
     width: 300px
+    height: 100%
+    z-index: 1000
+    overflow: auto
+    ul
+      list-style-type: none
+      margin: 0
+      padding: 0
     li
       padding: .2em
     li, li a
@@ -303,6 +281,7 @@ ul.subnav.logged-out
         background-color: $color-blue-3
         color: $color-white
     a
+      display: block
       &:hover
         color: $color-blue-3
         text-decoration: none
