--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -22,19 +22,18 @@ a.site-title
   transition: transform .2s ease-in-out
   -webkit-backface-visibility: hidden
 
-.nav-flyout-contentmask, .nav-flyout-contentmask-left
+.nav-flyout-contentmask
+  display: none
   position: fixed
   top: 0
   bottom: 0
   left: 0
   right: 0
   z-index: 1
+  overflow: hidden
   height: 100vh
   background-color: rgba(0,0,0, .7)
 
-.nav-flyout-navmask, .nav-flyout-navmask-left
-  right: 180px
-  z-index: 1
 
 /* Menu Toggle */
 
@@ -128,10 +127,14 @@ ul.subnav.logged-out
 .btn-public-nav
   display: none
 
+/* Med Screen Styles*/
+@media (min-width: $media-small-max)
+  .the-nav .nav-pill.right.public-nav
+    display: none !important
 
 /* Large Screen Styles*/
 @media (min-width: $media-large-min)
-  .offscreen-sidebar
+  .offscreen-sidebar, .nav-flyout-contentmask
     display: none !important
 
   .navbar
@@ -266,6 +269,8 @@ ul.subnav.logged-out
     height: 100%
     z-index: 1000
     overflow: auto
+    transform: translate3d(10px, 0, 0)
+    -webkit-transform: translate3d(10px, 0, 0)
     ul
       list-style-type: none
       margin: 0
@@ -300,14 +305,24 @@ ul.subnav.logged-out
       margin: .5rem 0
       width: 100%
 
-    a
-      color: $color-blue-4
-    
     .course-site
       background-color: $color-blue-1
       color: $color-white
       padding: .5rem .75rem
       font-size: 1rem
+
+  .offscreen-sidebar.animating
+    display: block
+    transition: transform .25s ease-in-out
+    -webkit-transition: -webkit-transform .25s ease-in-out
+
+  .offscreen-sidebar.animating.opening
+    transform: translate3d( 0, 0, 0 )
+    -webkit-transform: translate3d( 0, 0, 0 )
+
+  .offscreen-sidebar.animating.closing
+    transform: translate3d( 0, 0, 0 )
+    -webkit-transform: translate3d( 0, 0, 0 )
 
 @media (max-width: $media-small-max)
   .navbar > .mobile-nav > .right
