--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,7 @@
   %body(class="#{body_class}")
     = render partial: "layouts/top_bar"
     - if current_user
+      %a.nav-flyout-contentmask
       .inner-wrap.clearfix
         - if current_user_is_staff?
           = render partial: "layouts/staff"
