--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -55,3 +55,4 @@
                 %li= link_to glyph(:edit) + "Edit", edit_course_path(course), class: "button"
                 %li= link_to glyph(:trash) + "Delete", course, class: "button", id: "course-id-#{course.id}", data: { confirm: "This will delete #{course.name} - are you sure?" }, :method => :delete
                 %li= link_to glyph(:copy) + "Copy", copy_courses_path(id: course.id), class: "button", :method => :copy
+                %li= link_to glyph(:copy) + "Copy + Students", copy_with_students_courses_path(id: course.id), class: "button", :method => :copy_with_student
