--- a/app/assets/stylesheets/_datepicker.sass
+++ b/app/assets/stylesheets/_datepicker.sass
@@ -3,6 +3,20 @@
 .ui-datepicker.ui-widget-content
 	background: $color-blue-4
 
+.ui-datepicker
+	.ui-datepicker-prev, .ui-datepicker-next
+		border: 1px solid $color-grey-8
+		top: 1px
+
+	.ui-datepicker-prev .ui-icon, .ui-datepicker-next .ui-icon
+		background-image: image-url('ui-icons_454545_256x240.png')
+
+	.ui-datepicker-prev
+		left: 2px
+
+	.ui-datepicker-next
+		right: 2px
+
 .ui-timepicker-div
 	.ui-widget-header
 		margin-bottom: 8px
@@ -20,7 +34,7 @@
 
 	td
 		font-size: 90%
-		
+
 	.ui_tpicker_unit_hide
 		display: none
 
