--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -264,11 +264,11 @@ ul.subnav.logged-out
   .offscreen-sidebar
     position: fixed
     background-color: $color-grey-6
-    width: 300px
+    width: 280px
     height: 100%
     z-index: 1000
     overflow: auto
-    left: -300px
+    left: -280px
 
     ul
       list-style-type: none
@@ -310,17 +310,37 @@ ul.subnav.logged-out
       padding: .5rem .75rem
       font-size: 1rem
 
+    .course-info-btn-mobile
+      position: relative
+
+      i
+        position: absolute
+        top: 8px
+        right: 8px
+
+    ul.course-info
+      max-height: 0px
+      overflow: hidden
+      -webkit-transition: all 0.5s ease-in-out
+      -moz-transition: all 0.5s ease-in-out
+      -o-transition: all 0.5s ease-in-out
+      -ms-transition: all 0.5s ease-in-out
+      transition: all 0.5s ease-in-out
+
+    ul.course-info.open
+      max-height: 500px
+
   .offscreen-sidebar.animating
     transition: transform 0.25s ease-in-out
     -webkit-transition: -webkit-transform 0.25s ease-in-out
 
   .offscreen-sidebar.animating.opening
-    transform: translate3d(300px, 0, 0)
-    -webkit-transform: translate3d(300px, 0, 0)
+    transform: translate3d(280px, 0, 0)
+    -webkit-transform: translate3d(280px, 0, 0)
 
   .offscreen-sidebar.animating.closing
-    transform: translate3d(-300px, 0, 0)
-    -webkit-transform: translate3d(-300px, 0, 0)
+    transform: translate3d(-280px, 0, 0)
+    -webkit-transform: translate3d(-280px, 0, 0)
   
   .offscreen-sidebar.menu-visible
     left: 0
