--- a/app/views/layouts/_top_bar.haml
+++ b/app/views/layouts/_top_bar.haml
@@ -13,7 +13,9 @@
       %hr
     - elsif current_user_is_staff?
       = render partial: "layouts/navigation/staff_subnav"
-    %h5 Course Info
+    %a.course-info-btn-mobile
+      %h5 Course Info
+      = glyph("chevron-down")
     %ul.course-info
       = render partial: "layouts/navigation/class_info"
     %hr
