--- a/app/assets/stylesheets/_staff_sidebar.sass
+++ b/app/assets/stylesheets/_staff_sidebar.sass
@@ -10,28 +10,6 @@
   opacity: .9
   font-weight: 300
 
-  li.has-form
-    margin-bottom: .75rem
-
-  input[type=text]
-    height: 1.7rem
-    border: 0
-    float: left
-    padding: 5px
-    width: 188px
-    margin-bottom: .75rem
-    border-top-left-radius: $global-radius
-    border-bottom-left-radius: $global-radius
-
-  a.button
-    width: 20px
-    padding: 8px 6px 7px !important
-    float: right
-    border-top-left-radius: 0
-    border-bottom-left-radius: 0
-    &:hover
-      background-color: darken($color-blue-3, 10%) !important
-
   /* Subheadings */
   h5
     font-size: .9rem
@@ -68,6 +46,30 @@
     span.sidebar-nav
       display: block
       padding: 2.4px
+
+/* Styling of search fields in staff-sidenav and mobile nav */
+.sidebar-container, .sidebar
+  li.has-form
+    margin-bottom: .75rem
+
+  input[type=text]
+    height: 1.7rem
+    border: 0
+    float: left
+    padding: 5px
+    width: 188px
+    margin-bottom: .75rem
+    border-top-left-radius: $global-radius
+    border-bottom-left-radius: $global-radius
+
+  a.button
+    width: 20px
+    padding: 8px 6px 7px !important
+    float: right
+    border-top-left-radius: 0
+    border-bottom-left-radius: 0
+    &:hover
+      background-color: darken($color-blue-3, 10%) !important
 
 /* Positioning and styling of notification badges in staff-sidenav */
 .staff-sidenav li
