--- a/app/assets/stylesheets/_topbar.sass
+++ b/app/assets/stylesheets/_topbar.sass
@@ -16,52 +16,14 @@ a.site-title
   width: 100%
   margin: 0 auto
 
-/* In app mobile left flyout menu styles */
-.layout-right-content
-  z-index: 100
-  transition: transform .2s ease-in-out
-  -webkit-backface-visibility: hidden
-
-.nav-flyout-contentmask
-  display: none
-  position: fixed
-  top: 0
-  bottom: 0
-  left: 0
-  right: 0
-  z-index: 1
-  overflow: hidden
-  height: 100vh
-  background-color: rgba(0,0,0, .7)
-
-
-/* Menu Toggle */
-
+/* Navbar Styles */
 .navbar ul
   list-style-type: none
 
-.btn-navbar-left
-  position: absolute
-  top: 7px
-  font-size: 1.1rem
-  width: 35px
-  height: 40px
-  padding: 4px 0
-  display: block
-  z-index: 1
-  color: $color-green-2
-  &:hover
-    color: $color-green-2
-    text-decoration: none
-
-.btn-navbar-left
-  left: 0
-
-/* Navbar Styles */
 .navbar
   position: fixed
   top: 0 !important
-  z-index: 1000
+  z-index: 99
   height: 45px !important
 
 .logged-out
@@ -261,12 +223,13 @@ ul.subnav.logged-out
   li.dropdown a.section-title
     color: $color-blue-3
 
+  /* In app mobile left flyout menu styles */
   .offscreen-sidebar
     position: fixed
     background-color: $color-grey-6
     width: 280px
     height: 100%
-    z-index: 1000
+    z-index: 100
     overflow: auto
     left: -280px
 
@@ -275,7 +238,7 @@ ul.subnav.logged-out
       margin: 0
       padding: 0
     li
-      padding: .2em
+      padding: .4em
     li, li a
       color: $color-grey-2
       text-transform: capitalize
@@ -304,6 +267,13 @@ ul.subnav.logged-out
       margin: .5rem 0
       width: 100%
 
+    input[type=text]
+      width: 220px
+
+    a.button
+      color: $color-white
+      font-size: 0.8rem
+
     .course-site
       background-color: $color-blue-1
       color: $color-white
@@ -312,11 +282,20 @@ ul.subnav.logged-out
 
     .course-info-btn-mobile
       position: relative
+      cursor: pointer
 
       i
         position: absolute
         top: 8px
         right: 8px
+        -webkit-transition: all 0.2s ease-in-out
+        -moz-transition: all 0.2s ease-in-out
+        -o-transition: all 0.2s ease-in-out
+        -ms-transition: all 0.2s ease-in-out
+        transition: all 0.2s ease-in-out
+
+    .course-info-btn-mobile.open i
+      transform: rotate(180deg)
 
     ul.course-info
       max-height: 0px
@@ -344,6 +323,30 @@ ul.subnav.logged-out
   
   .offscreen-sidebar.menu-visible
     left: 0
+
+  .nav-flyout-contentmask
+    display: none
+    position: fixed
+    top: 0
+    bottom: 0
+    left: 0
+    right: 0
+    z-index: 99
+    overflow: hidden
+    height: 100vh
+    background-color: rgba(0,0,0, .7)
+
+  .btn-navbar-left
+    position: absolute
+    top: 14px
+    left: 8px
+    font-size: 1.1rem
+    display: block
+    z-index: 1
+    color: $color-green-2
+    &:hover
+      color: $color-green-2
+      text-decoration: none
 
 @media (max-width: $media-small-max)
   .navbar > .mobile-nav > .right
