--- a/app/views/layouts/_top_bar.haml
+++ b/app/views/layouts/_top_bar.haml
@@ -42,5 +42,5 @@
               = link_to glyph('info-circle hidden-sm') + "Class Info", "#", title: "Quick information about #{current_course.name}", class: "section-title"
               %ul.course-info-card= render partial: "layouts/navigation/class_info"
             = render partial: "layouts/navigation/authenticated_nav"
-        %a.btn-navbar-left.btn-navbar-navtoggle.btn-flyout-left-trigger.hide-for-large
+        %a.btn-navbar-left.hide-for-large
           %i.fa.fa-bars.fa-fw
