--- a/app/views/assignments/settings.html.haml
+++ b/app/views/assignments/settings.html.haml
@@ -135,10 +135,10 @@
                 - if assignment.grade_select?
                   %label.sr-only{:for => "score_levels"}
                     Score Levels
-                  = select_tag(:assignment_score_levels, options_from_collection_for_select(assignment.assignment_score_levels, :value, :name))
+                  = select_tag(:assignment_score_levels, options_from_collection_for_select(assignment.assignment_score_levels, :points, :name))
                 - elsif assignment.grade_radio?
                   - assignment.assignment_score_levels.each do |asl|
-                    = radio_button_tag(asl.name, asl.value)
+                    = radio_button_tag(asl.name, asl.points)
                     %span.not_bold= label_tag(asl.name)
                     %br
                 - elsif assignment.grade_checkboxes?
