Change import url to /course/import

--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -8,6 +8,10 @@
       %a{:href => new_course_path }
         %i.fa.fa-plus
         New Course
+    %li
+      %a{:href => providers_import_path }
+        %i.fa.fa-cloud-download
+        Import Courses
 
 .pageContent
   = render partial: "layouts/alerts"
