Card UI implementation

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -33,6 +33,7 @@
   *= require _buttons_and_icons
   *= require _datepicker
   *= require _debug
+  *= require _cards
   *= require _collapse
   *= require _context_menu
   *= require _features
