added message to show when no starred assignments exist with prompt to check out grade predictor

--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -86,6 +86,11 @@
     a
       font-weight: 400
 
+  .my-planner-alert
+    background-color: transparentize($color-blue-4, .8)
+    padding: 2rem
+    text-align: center
+
   /* Styles the small version of the grading scheme */
   .bar_magic
     border-radius: 5px
