--- a/app/views/assignments/_show_instructor.haml
+++ b/app/views/assignments/_show_instructor.haml
@@ -28,6 +28,7 @@
         - else
           = render partial: "assignments/individual/individual_show", locals: { presenter: presenter }
       .ui-tabs-panel#tabt2{role: "tabpanel", "aria-hidden" => false }
+        = render partial: "assignments/description_and_downloads", locals: { presenter: presenter }
       - if presenter.grade_with_rubric?
         .ui-tabs-panel#tabt3{role: "tabpanel", "aria-hidden" => false }
           .tab-container
