Display the course in the list of assignments

--- a/app/views/courses/import/assignments.html.haml
+++ b/app/views/courses/import/assignments.html.haml
@@ -8,12 +8,14 @@
   %table
     %thead
       %tr
+        %th{scope: "col"} Course
         %th{scope: "col"} Name
         %th{scope: "col"} Description
         %th.button-column
     %tbody
       - @assignments.each do |assignment|
         %tr
+          %td= @course["name"]
           %td= assignment["name"]
           %td= assignment["description"].html_safe
           %td
