--- a/app/views/students/dashboard/_dashboard_to_do_list.haml
+++ b/app/views/students/dashboard/_dashboard_to_do_list.haml
@@ -7,8 +7,8 @@
       = link_to "My Planner", "#", class: "filter-button button", id: "my-planner"
     %ul.todo-list-assignments
       - cache multi_cache_key :student_dashboard_todo_list, current_student, current_course do
-        - current_course.assignments.chronological.includes(:assignment_type, :unlock_conditions).each do |assignment|
-          - if assignment.soon? && assignment.include_in_to_do? && assignment.visible_for_student?(current_student)
+        - presenter.assignments.each do |assignment|
+          - if presenter.to_do_assignment?
             %li{:class => assignment.is_predicted_by_student?(current_student) ? "assignment-item starred" : "assignment-item"}
               - if assignment.accepts_submissions? && assignment.is_unlocked_for_student?(current_student)
                 - if assignment.is_individual?
