--- a/app/assets/stylesheets/_staff_sidebar.sass
+++ b/app/assets/stylesheets/_staff_sidebar.sass
@@ -48,9 +48,9 @@
       padding: 2.4px
 
 /* Styling of search fields in staff-sidenav and mobile nav */
-.sidebar-container, .sidebar
+.sidebar-container, .sidebar, ul.nav.nav-pill
   li.has-form
-    margin-bottom: .75rem
+    margin-top: .5rem
 
   input[type=text]
     height: 1.7rem
