Fixed a display issue with the button column

--- a/app/views/importers/courses.html.haml
+++ b/app/views/importers/courses.html.haml
@@ -10,7 +10,7 @@
       %tr
         %th{scope: "col"} Name
         %th{scope: "col"} Description
-        %th{"data-dynatable-no-sort" => "true"}.button-column
+        %th.button-column{"data-dynatable-no-sort" => "true"}
     %tbody
       - @courses.each do |course|
         %tr
