replacing view logic with presenter methods

--- a/app/views/info/_student_dashboard.html.haml
+++ b/app/views/info/_student_dashboard.html.haml
@@ -5,4 +5,4 @@
   = render "layouts/alerts"
 
   #student-dashboard
-    = render "students/student_dashboard"
+    = render partial: "students/student_dashboard", locals: { presenter: presenter }
