Add the routes for /importers to use instead of /courses/import

--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -9,7 +9,7 @@
         %i.fa.fa-plus
         New Course
     %li
-      %a{:href => providers_import_path }
+      %a{:href => importers_path }
         %i.fa.fa-cloud-download
         Import Courses
 
