--- a/app/views/layouts/_top_bar.haml
+++ b/app/views/layouts/_top_bar.haml
@@ -8,6 +8,8 @@
         %span.course= "#{current_course.courseno} "
         %span.course_name= "#{current_course.name} "
         %span.course_semester= "#{current_course.try(:semester)} #{current_course.try(:year)}"
+      .show-for-small
+        %ul= render partial: "layouts/navigation/course_search"
       - if current_user_is_student?
         = render partial: "students/student_profile_tabs"
       - elsif current_user_is_staff?
@@ -20,9 +22,6 @@
         %ul.course-info
           = render partial: "layouts/navigation/class_info"
         %hr
-      %h5 My Courses
-      %ul.course-list
-        = render partial: "layouts/navigation/course_list"
       %hr
       %ul.account-info
         = render partial: "layouts/navigation/account_info"
