--- a/app/views/layouts/navigation/_authenticated_nav.haml
+++ b/app/views/layouts/navigation/_authenticated_nav.haml
@@ -1,8 +1,4 @@
-%li.has-form{role: "search"}
-  %label.sr-only{:for => "search-input"}
-    Search Courses
-  %input.courses-search-query.search-input{ data: { autocompleteUrl: courses_path }, type: "text", placeholder: "My Courses", label: false }
-  %a.alert.button{ :href => "#" } Go
+= render partial: "layouts/navigation/course_search"
 %li.dropdown.my-account
   %a.section-title{:href => "#", :title => "My account management"}
     - if current_user.avatar_file_name.present?
