Cleaned up challenges, challenge grades, and challenge score levels

--- a/app/views/challenge_grades/_form.html.haml
+++ b/app/views/challenge_grades/_form.html.haml
@@ -21,7 +21,7 @@
   %section
     %h4 Feedback
     .textarea
-      = f.text_area :text_feedback, class: "froala"
+      = f.text_area :feedback, class: "froala"
 
   .submit-buttons
     %ul
