--- a/app/views/challenge_grades/show.html.haml
+++ b/app/views/challenge_grades/show.html.haml
@@ -16,4 +16,4 @@
     = @challenge_grade.status
   %p
     %b Feedback:
-    %p= raw @challenge_grade.text_feedback
+    %p= raw @challenge_grade.feedback
