added styles for module

--- a/app/assets/stylesheets/_student_dashboard.sass
+++ b/app/assets/stylesheets/_student_dashboard.sass
@@ -227,6 +227,23 @@
   &.previous
     left: 5px
 
+/* Styles weekly stats module */
+.weekly-stats-module
+  font-size: 0.8rem
+  .module-section
+    margin-bottom: 1rem
+  p
+    margin: 0
+    font-size: 0.9rem
+    font-weight: 400
+  ul
+    list-style: none
+    padding: 0
+    margin-top: .25rem
+    font-weight: 300
+  img
+    vertical-align: middle
+
 @media (max-width: $media-small-max)
   #student-dashboard
     flex-direction: column
